--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -38,11 +38,11 @@
                 <span class="oi oi-pencil" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        @*<div class="nav-item px-3">
             <NavLink class="nav-link" href="account/claims">
             <span class="oi oi-pencil" aria-hidden="true"></span> Claims
             </NavLink>
-        </div>
+        </div>*@
          <div class="nav-item px-3">
             <NavLink class="nav-link" href="/createproject">
             <span class="oi oi-pencil" aria-hidden="true"></span> Create a project
