--- a/ProjectBank/Client/Pages/AccountSettings.razor
+++ b/ProjectBank/Client/Pages/AccountSettings.razor
@@ -2,12 +2,9 @@
 @page "/account/settings"
 
 <!---- USINGS ATTRIBUTES AND INJECTIONS  ---->
-@inject NavigationManager uriHelper;
-@inject AuthenticationStateProvider AuthenticationStateProvider;
-@inject HttpClient Http
-@using Microsoft.AspNetCore.Authorization;
-@using System.Security.Claims;
-@using System.Net
+@inject NavigationManager _uriHelper;
+@inject AuthenticationStateProvider _authenticationStateProvider;
+@inject HttpClient _http
 
 
 @attribute [Authorize]
@@ -21,7 +18,7 @@
             <RadzenLabel Text="Name:" />
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@name style="width: 50%;" Name="Name"/>
+            <RadzenTextBox Disabled=true Placeholder=@_name style="width: 50%;" Name="Name"/>
         </div>
     </div>
     <div class="row">
@@ -29,7 +26,7 @@
             <RadzenLabel Text="Email:" />
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@email style="width: 50%;" Name="Email"/>
+            <RadzenTextBox Disabled=true Placeholder=@_email style="width: 50%;" Name="Email"/>
         </div>
     </div>
     <div class="row">
@@ -37,13 +34,13 @@
             <RadzenLabel Text="Role:" />
         </div>
         <div class="col-md-9">
-            <RadzenTextBox Disabled=true Placeholder=@currentRole style="width: 50%;" Name="Role"/>
+            <RadzenTextBox Disabled=true Placeholder=@_currentRole style="width: 50%;" Name="Role"/>
         </div>
     </div>
 </RadzenFieldset>
 
 <RadzenButton Click=@Edit Text="Edit profile"/>
-<RadzenButton style="width: 160px" IsBusy=@busyProfile Click=@OnBusyClickProfile Text="Save" />
+<RadzenButton style="width: 160px" IsBusy=@_busyProfile Click=@OnBusyClickProfile Text="Save" />
 
 <h2 style="padding-top: 2em">Profile picture:</h2>
 <RadzenFieldset class="mb-4">
@@ -52,58 +49,50 @@
             <RadzenLabel Text="Profile Picture:" />
         </div>
         <div class="col-md-9">
-            @if (account.PictureUrl != null)
+            @if (_account?.PictureUrl != null)
             {
-                <img class="card-img-top" src=@account.PictureUrl alt="Project image" style="padding-bottom: 2em"/>
+                <div><img class="card-img-top" src=@_account?.PictureUrl alt="No Profile Picture" style="padding-bottom: 1em"/></div>
             }
         </div>
     </div>
 </RadzenFieldset>
 
- <ImageUploader id=@account.Id isProject="false"></ImageUploader>
+ <ImageUploader id=@_account?.Id isProject="false"></ImageUploader>
     
 @code {
 
     //VARIABLES
-    private bool editing = true;
-    private bool busyProfile;
+    private bool _editing = true;
+    private bool _busyProfile;
     
-    private string? name;
-    private string? email;
-    private string? currentRole;
-    private string? token;
-    private AccountDetailsDto? account;
+    private string? _name;
+    private string? _email;
+    private string? _currentRole;
+    private string? _token;
+    private AccountDetailsDto? _account;
     
     //PAGE SCRIPTS
     private void Edit()
     {
-        editing = !editing;
+        _editing = !_editing;
     }
-
-   
     protected override async Task OnInitializedAsync(){
-        var user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
-        name = user.Identity?.Name;
-        currentRole = user.FindFirst(c => c.Type.Contains("appRole"))?.Value;
-        email = user.FindFirst(c => c.Type.Contains("preferred_username"))?.Value;
-        token = user.FindFirst(c => c.Type.Contains("aud"))?.Value;
-        try
-        {
-            account = await Http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/{token}"); //Method does not exists!
-        }
-        catch(AccessTokenNotAvailableException exception)
-        {
-            exception.Redirect();
-        }
+        
+            var user = (await _authenticationStateProvider.GetAuthenticationStateAsync()).User;
+            _name = user.Identity?.Name;
+            _currentRole = user.FindFirst(c => c.Type.Contains("appRole"))?.Value;
+            _email = user.FindFirst(c => c.Type.Contains("preferred_username"))?.Value;
+            _token = user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+            _account = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/{_token}");
     }
   
     private async Task OnBusyClickProfile()
     {
-        busyProfile = true;
+        _busyProfile = true;
         await Task.Delay(2000);
         UpdateProfile();
-        busyProfile = false;
-        uriHelper.NavigateTo(uriHelper.Uri, forceLoad: true);
+        _busyProfile = false;
+        _uriHelper.NavigateTo(_uriHelper.Uri, forceLoad: true);
     }
 
     private void UpdateProfile()
