--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -3,16 +3,17 @@
 @inject NavigationManager NavigationManager
 
 <div class="form-group input-group">
-    @*<RadzenUpload Multiple="true" id="Image" Accept="image/*" OnChange="@OnFileSelection" Url="upload/multiple" Style="margin-bottom: 15px;">Image</RadzenUpload>
-    <RadzenButton Text="Clear" Click="ClearImage" Style="margin-bottom: 15px;" />*@
     <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
 </div>
 <div class="form-group">
         @if (!string.IsNullOrWhiteSpace(imageUrl))
         {
             <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@imageUrl" alt="Project Image" class="img-thumbnail"></div>
-            <button type="button" @onclick="UploadImage" class="btn btn-secondary" style="background-color:darkgreen; opacity: 70">Upload</button>
-            <button type="button" @onclick="ClearImage" class="btn btn-secondary" >Clear</button>
+            <div style="padding: 0.5em">
+                <RadzenButton style="width: 160px" Icon="save" BusyText="Saving ..." IsBusy=@busy Click=@UploadImage Text="Upload" />
+                <RadzenButton style="width: 160px" IsBusy=@busy Click=@ClearImage Text="Clear" />
+            </div>
+            
         }@if (sizeExceeded)
          {
              <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
@@ -40,6 +41,7 @@
 
     private IBrowserFile? imageFile;
     private bool sizeExceeded;
+    private bool busy;
 
     protected override async Task OnInitializedAsync()
     {
@@ -73,6 +75,8 @@
 
     private async Task UploadImage()
     {
+        busy = true;
+
         if (imageFile != null)
         {
             var bytes = new byte[imageFile.Size];
@@ -103,13 +107,17 @@
                 }
                 NavigationManager.NavigateTo(NavigationManager.Uri, forceLoad: true);
             }
+            await Task.Delay(2000);
+            busy = false;
         }
     }
-    private void ClearImage()
+    private async Task ClearImage()
     {
+        busy = true;
         imageUrl = string.Empty;
         imageFile = null;
-        StateHasChanged();
+        await Task.Delay(2000);
+        busy = false;
     }
 
     private void Cancel()
