Browse styling. Like and dislike functionality on search works.

--- a/ProjectBank/Client/Pages/Search.razor
+++ b/ProjectBank/Client/Pages/Search.razor
@@ -1,12 +1,13 @@
 ﻿@page "/search"
 @using System.Data.SqlTypes
+@using System.Security.Claims
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject HttpClient Http
 
 <PageTitle>ProjectBank - Search</PageTitle>
 
 <div class="searchBar_wrapper">
-    <input @bind="SearchText" @onkeyup="Enter" type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
+    <input @bind="_searchText" @onkeyup="Enter" type="text" class="searchBar" runat="server" name="Search_input" placeholder="Search... Project Title, Supervisor, or #Keyword">
     <button class="btn_search" @onclick="LoadProjects"> <span class="oi oi-magnifying-glass" style="color: #212121;" aria-hidden="true"></span></button>
 </div>
 
@@ -19,8 +20,16 @@
             <div class="project_builder_search" id="P_@project.Id">
                 <div class="project_search_content">
                     <div class="like_star">
-                        <input type="checkbox" class="star_checkbox" id="star_checkbox_@project.Id" unchecked="true" @onchange="() => AddOrRemoveFavorite(project.Title)"/>
-                        <label class="oi oi-star" id="star_@project.Id" for="star_checkbox_@project.Id"></label>
+                        @if (_likedProjects.Contains(project.Title))
+                        {
+                            <input type="checkbox" class="star_checkbox" id="star_checkbox_@project.Id" checked="checked" @onchange="() => AddOrRemoveFavorite(project.Title)"/>
+                            <label class="oi oi-star" id="star_@project.Id" for="star_checkbox_@project.Id"></label>
+                        }
+                        else
+                        {
+                            <input type="checkbox" class="star_checkbox" id="star_checkbox_@project.Id" unchecked="true" @onchange="() => AddOrRemoveFavorite(project.Title)"/>
+                            <label class="oi oi-star" id="star_@project.Id" for="star_checkbox_@project.Id"></label>
+                        }
                     </div>
                     <div id="project_search_title">Title: @project.Title </div>
                     <div id="search_supervisor">by: <x onclick="">@project.AuthorName</x></div>
@@ -67,15 +76,16 @@
 
 @code {
 
-    public string SearchText = "";
+    private string _searchText = "";
 
     ProjectDetailsDto[]? _projects;
 
     async Task LoadProjects()
     {
+        await OnSearch();
         try
         {
-            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{SearchText}");
+            _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{_searchText}");
         }
         catch (AccessTokenNotAvailableException exception)
         {
@@ -90,9 +100,10 @@
         if (e.Code == "Enter" || e.Code == "NumpadEnter")
         {
     //await LoadProjects();
+            await OnSearch();
             try
             {
-                _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{SearchText}");
+                _projects = await Http.GetFromJsonAsync<ProjectDetailsDto[]?>($"/api/SearchQuery/{_searchText}");
             }
             catch (AccessTokenNotAvailableException exception)
             {
@@ -103,19 +114,40 @@
     }
 
 
-    private void AddOrRemoveFavorite(string title) //virker ikke
+    private IEnumerable<string> _likedProjects = null!;
+    private string _aToken;
+
+    protected async Task OnSearch()
     {
-        var alreadyliked = false;
-
-        if (alreadyliked)
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        if (user.Identity?.IsAuthenticated == true)
         {
-    // fjern fra liked liste
+            var _user = (await AuthenticationStateProvider.GetAuthenticationStateAsync()).User;
+            var _claims = _user.Claims;
+            _aToken = _user.FindFirst(c => c.Type.Contains("aud"))?.Value;
+            var account = await Http.GetFromJsonAsync<AccountDetailsDto>($"/api/Account/{_aToken}");
+            if (account != null)
+            {
+                _likedProjects = account.SavedProjects;
+            }
         }
-        if (!alreadyliked)
-        {
-    // skal add til fav_liste
-        }
+    }
+    
+    
 
+    private async Task AddOrRemoveFavorite(string t) //Post virker
+    {
+
+        if (_likedProjects.Contains(t))
+        {
+            await Http.PutAsJsonAsync($"api/Account/{_aToken}/remove", t);
+        }
+        
+        if (!_likedProjects.Contains(t))
+        {
+            await Http.PostAsJsonAsync($"api/Account/{_aToken}", t);
+        }
     }
 }
 
