--- a/ProjectBank/Client/wwwroot/css/browse.css
+++ b/ProjectBank/Client/wwwroot/css/browse.css
@@ -1,3 +1,5 @@
+@media (min-width: 641px) {
+  
 .grid-container {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -42,3 +44,55 @@
   .browse_all_btn:hover{
     color: #ffffff;
   }
+}
+
+/*@media (max-width: 641px) {
+
+  .grid-container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 100%;
+    align-content: center;
+    align-items: center;
+  }
+  .grid-item {
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 20px;
+    margin-right: 20px;
+    height: 200px;
+    border-radius: 10px;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    word-break: break-word;
+    transition: all 0.25s ease;
+  }
+
+  .grid-item:hover{
+    transition-delay: 0.25s;
+    background: linear-gradient(10deg, #fd297b, #ff655b);
+    color: white;
+    box-shadow: 5px 7px #dcd8d8;
+  }
+
+  .browse_all{
+    color: #d7d7d7;
+  }
+
+  .browse_all_btn{
+    background: none;
+    border: none;
+    color: #d7d7d7;
+    text-decoration: underline;
+    transition: all 0.25s ease;
+  }
+
+  .browse_all_btn:hover{
+    color: #ffffff;
+  }
+}*/ /*til mobil scaling*/
